# artifacts/api-server/src/routes/index.ts
@@ -34,6 +34,7 @@ import notificationsRouter from "./notifications";
 import companySettingsRouter from "./company_settings";
 import staffRouter from "./staff";
 import emailTemplatesRouter from "./email_templates";
+import emailSettingsRouter from "./email_settings";
 import emailsRouter from "./emails";
 import integrationsRouter from "./integrations";
 import storageRouter from "./storage";
@@ -75,6 +76,7 @@ router.use(notificationsRouter);
 router.use(companySettingsRouter);
 router.use(staffRouter);
 router.use(emailTemplatesRouter);
+router.use(emailSettingsRouter);
 router.use(emailsRouter);
 router.use(integrationsRouter);
 router.use(storageRouter);
